--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,28 @@ html, body {
 ::-webkit-scrollbar-button {
   display: none; /* Hide the scrollbar buttons */
 }
+
+/* globals.css (Quiz) */
+.flip-container {
+  perspective: 1000px;
+}
+
+.flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s ease-in-out; /* Smooth flip transition */
+  transform-style: preserve-3d;
+}
+
+.flipped .flipper {
+  transform: rotateY(120deg); /* 120-degree flip */
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
