added comment name, fixed profile manage password requirement, and removed pagination

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-/* app/globals.css */
+/* app/globals.css (Global App CSS File) */
 @import url('https://fonts.googleapis.com/css2?family=Island+Moments&family=Inria+Serif&display=swap');
 @tailwind base;
 @tailwind components;
